  * A right-click menu that copies an animation to the clipboard.
  * A new default value for the current MathJaX release.
  * A "recent packages" menu for packages loaded from load() or from the menu.
  * Advertise the current file and the file's state to the Operating System
  * Code simplifications.
  * A dockable panel for the debug messages.
  * A more modern theme.
  * A XDG-compatible config file location
  * Matrices can now be displayed with round and square brackets.
  * Many bug fixes.
  * Reduced the number of autogenerated files and  external dependencies to a minimum.
  * Big performance improvements, again.

18.02:
  * More tooltips
  * A menu containing the most important commands for lists.
  * TableOfContents: A right-click menu item that allows to toggle display of section numbers
  * The size of images can now be restricted to any amount of centimeters.
  * On a few operating systems: The network indicator icon now knows how much CPU
    power Maxima uses.
  * Autocompletion now suggests the names of built-in packages for load(), batch()
    and batchload().
  * Autocompletion now suggests the names of built-in demos for demo().
  * wxMaxima can now handle requests to display raw lisp elements.
  * A drop-down box for changing cell styles
  * If an input cell is hidden and has no output it now is no more displayed
    as a blank vertical space.
  * wxMaxima no more requires the icon files, tooltips and autocompletion files to be
    shipped as separate files, which makes creating a ready-to-install package of wxMaxima
    easier and less error-prone.
  * Autosave is now enabled by default on new installs.
  * Big code cleanups.
  * Many bugfixes
  * Many performance improvements
  * Dropped the autotools as the cmake build of wxMaxima is way more powerful.

17.10:
  * Jump to the char containing the error on encountering unmatched parenthesis.
  * Try to place the cursor near the error in all other cases.