@@ -14,6 +14,8 @@ Current:
   * Code simplifications.
   * A dockable panel for the debug messages.
   * A more modern theme.
+  * Draw: A right-click menu allowing to pop-out images the gnuplot temp files for
+    still do exist.
   * A XDG-compatible config file location
   * Matrices can now be displayed with round and square brackets.
   * Many bug fixes.
